More adjustments to README

--- a/archive/README-202507.md
+++ b/archive/README-202507.md
@@ -9,15 +9,15 @@ Professionally, I specialize in engineering end-to-end AI/ML solutions, from mod
 ## 💡 About Me
 
 - ⚙️ <b>Currently:</b> My recent work primarily involves modernizing and automating legacy systems into efficient, cloud-integrated solutions, leveraging cutting-edge AI/ML models and LLMs to build new, impactful projects. While most of my contributions are on private company GitLab repositories, this work includes:
-    - Architecting and optimizing scalable ETL pipelines for downstream AI/ML applications
-    - Implementing CI/CD pipelines and containerized deployments on AWS
-    - Prototyping and deploying robust ML models for various applications, including profitability forecasting
-    - Developing internal tools using LLMs for tasks like database exploration and workflow automation
+- Architecting and optimizing scalable ETL pipelines for downstream AI/ML applications
+- Implementing CI/CD pipelines and containerized deployments on AWS
+- Prototyping and deploying robust ML models for various applications, including profitability forecasting
+- Developing internal tools using LLMs for tasks like database exploration and workflow automation
 - 🧠 <b>Constantly Learning:</b> I’m passionate about expanding my knowledge in Cloud Technologies, Machine Learning, MLOps and the evolving field of Generative AI.
 - 🤖 <b>Recent work includes:</b>
-    - Box office predictions and analysis for movies and TV shows, incorporating data collection via APIs and web scraping
-    - Developing internal tools using LLMs for database exploration and automation
-    - Deploying and refining an image classification app for Chest-Xray image analysis
+- Box office predictions and analysis for movies and TV shows, incorporating data collection via APIs and web scraping
+- Developing internal tools using LLMs for database exploration and automation
+- Deploying and refining an image classification app for Chest-Xray image analysis
 - 🛠️ I enjoy solving weird edge cases and making projects and pipelines bulletproof  
 - 🎸 Music, fitness, and screen time (movies, series, or games) keep me balanced  
 - 📬 Always open to collaboration, fun side projects, or just chatting tech!
@@ -76,11 +76,10 @@ Professionally, I specialize in engineering end-to-end AI/ML solutions, from mod
 
 ---
 
-## 📫 Let's Connect!
+## 📫 Let's Connect
 
 If you're working on something exciting or have a challenge that needs a curious mind — feel free to reach out! Always happy to chat about data, tech, or interesting side quests.
 
 ---
 
 *Thanks for stopping by!*  
-
